CS-4 Clean Up Code