@@ -4,11 +4,11 @@ import static de.relluem94.capturespleef.CaptureSpleef.a;
 import static de.relluem94.capturespleef.CaptureSpleef.b;
 import static de.relluem94.capturespleef.CaptureSpleef.blau;
 import static de.relluem94.capturespleef.CaptureSpleef.cooldown;
-import static de.relluem94.capturespleef.CaptureSpleef.cslobby;
-import static de.relluem94.capturespleef.CaptureSpleef.emptysboard;
+import static de.relluem94.capturespleef.CaptureSpleef.csLobby;
+import static de.relluem94.capturespleef.CaptureSpleef.emptyScoreBoard;
 import static de.relluem94.capturespleef.CaptureSpleef.rot;
-import static de.relluem94.capturespleef.CaptureSpleef.sboard;
-import static de.relluem94.capturespleef.CaptureSpleef.teamsize;
+import static de.relluem94.capturespleef.CaptureSpleef.scoreBoard;
+import static de.relluem94.capturespleef.CaptureSpleef.teamSize;
 import static de.relluem94.capturespleef.CaptureSpleef.ts;
 import static de.relluem94.capturespleef.Strings.ACTIVE_WORLD;
 import static de.relluem94.capturespleef.Strings.CS_NAME;
@@ -25,6 +25,7 @@ import static de.relluem94.minecraft.server.spigot.essentials.Strings.PLUGIN_FOR
 import static de.relluem94.minecraft.server.spigot.essentials.helpers.ChatHelper.consoleSendMessage;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.bukkit.Bukkit;
 import org.bukkit.GameMode;
@@ -36,29 +37,28 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
+import org.jetbrains.annotations.NotNull;
 
 public class CMD implements CommandExecutor {
 
     @Override
-    public boolean onCommand(CommandSender sender, Command cmd, String cmdLabel, String[] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String cmdLabel, String[] args) {
         Location arena = new Location(Bukkit.getWorld(ACTIVE_WORLD), -104, 137, 272);
         Location lobby = new Location(Bukkit.getWorld(ACTIVE_WORLD), -132, 144, 272);
 
         a = rot.getSize();
         b = blau.getSize();
-        teamsize = a + b;
+        teamSize = a + b;
 
-        if (!(sender instanceof Player)) {
+        if (!(sender instanceof Player p)) {
             consoleSendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE, NO_USER);
             return true;
         }
 
-        Player p = (Player) sender;
-
         ItemStack d3 = new ItemStack(Material.SUGAR, 1);
         ItemMeta d4 = d3.getItemMeta();
         d4.setDisplayName("§8Wähle dein Team");
-        d4.setLore(Arrays.asList("§8Rechtklicke auf den §cNetherBrick §8oder den §9Prismarin"));
+        d4.setLore(List.of("§8Rechtklicke auf den §cNetherBrick §8oder den §9Prismarin"));
         d3.setItemMeta(d4);
 
         ItemStack e1 = new ItemStack(Material.SNOWBALL, 94);
@@ -79,10 +79,10 @@ public class CMD implements CommandExecutor {
                     if (p.hasPermission("rellu.capturespleef.join")) {
                         if (cooldown.contains(p)) {
                             p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + PLUGIN_SECONDARY_COLOR + "Du bist bereits in der CaptureSpleef Lobby");
-                        } else if (sboard.getTeams().size() == ts) {
+                        } else if (scoreBoard.getTeams().size() == ts) {
                             p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + PLUGIN_SECONDARY_COLOR + "Die Lobby ist voll bitte warte auf die nächste Runde");
                         } else {
-                            if (a == b && teamsize == ts) {
+                            if (a == b && teamSize == ts) {
                                 p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + PLUGIN_SECONDARY_COLOR + "Die Lobby ist Voll");
                             } else {
                                 cooldown.add(p);
@@ -102,7 +102,7 @@ public class CMD implements CommandExecutor {
                                 p.setGameMode(GameMode.SURVIVAL);
                                 p.setCustomName(CS_NAME);
                                 p.setAllowFlight(false);
-                                cslobby.addPlayer(p);
+                                csLobby.addPlayer(p);
                             }
 
                         }
@@ -116,8 +116,8 @@ public class CMD implements CommandExecutor {
                             p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + PLUGIN_SECONDARY_COLOR + "Du hast die CaptureSpleef Lobby verlassen");
                             p.teleport(arena);
                             p.setCustomName(p.getDisplayName());
-                            p.setScoreboard(emptysboard);
-                            sboard.resetScores(p);
+                            p.setScoreboard(emptyScoreBoard);
+                            scoreBoard.resetScores(p);
                             if (p.hasPermission("rellu.fly")) {
                                 p.setAllowFlight(true);
                             }
@@ -132,18 +132,18 @@ public class CMD implements CommandExecutor {
                     p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + PLUGIN_SECONDARY_COLOR + "Spiele Erklärung und Ziel");
                     p.sendMessage("§6" + PLUGIN_CHAT_SPACER);
                     p.sendMessage(PLUGIN_SECONDARY_COLOR + "Du kannst nur auf der selben Block-Farbe laufen wie deine Team-Farbe ist");
-                    p.sendMessage("§1          Team Blau \u00BB Prismarin Block");
-                    p.sendMessage("§4          Team Rot \u00BB Netherbrick Block");
+                    p.sendMessage("§1          Team Blau » Prismarin Block");
+                    p.sendMessage("§4          Team Rot » Netherbrick Block");
                     p.sendMessage("");
-                    p.sendMessage(PLUGIN_SECONDARY_COLOR + "Wandle mit einem Linksklick gegnerriche Blöcke zu deiner eigenen Farbe um");
+                    p.sendMessage(PLUGIN_SECONDARY_COLOR + "Wandle mit einem Linksklick gegnerische Blöcke zu deiner eigenen Farbe um");
                     p.sendMessage("");
-                    p.sendMessage("§dZiel \u00BB §aErobere mit einem Linksklick die Metall-Säule in der gegnerischen Basis");
+                    p.sendMessage("§dZiel » §aErobere mit einem Linksklick die Metall-Säule in der gegnerischen Basis");
                     p.sendMessage("§6" + PLUGIN_CHAT_SPACER);
                 } // Test
                 else if (args[0].equalsIgnoreCase("test")) {
                     if (p.hasPermission("rellu.capturespleef.test")) {
                         p.sendMessage("§6" + PLUGIN_CHAT_SPACER);
-                        p.sendMessage("§d" + teamsize);
+                        p.sendMessage("§d" + teamSize);
                         p.setAllowFlight(true);
                         p.sendMessage("§6" + PLUGIN_CHAT_SPACER);
                     }
