@@ -3,13 +3,13 @@ package de.relluem94.capturespleef.events;
 import static de.relluem94.capturespleef.CaptureSpleef.a;
 import static de.relluem94.capturespleef.CaptureSpleef.b;
 import static de.relluem94.capturespleef.CaptureSpleef.blau;
-import static de.relluem94.capturespleef.CaptureSpleef.cslobby;
+import static de.relluem94.capturespleef.CaptureSpleef.csLobby;
 import static de.relluem94.capturespleef.CaptureSpleef.lives;
 import static de.relluem94.capturespleef.CaptureSpleef.obj;
 import static de.relluem94.capturespleef.CaptureSpleef.rot;
-import static de.relluem94.capturespleef.CaptureSpleef.sboard;
+import static de.relluem94.capturespleef.CaptureSpleef.scoreBoard;
 import static de.relluem94.capturespleef.CaptureSpleef.teams;
-import static de.relluem94.capturespleef.CaptureSpleef.teamsize;
+import static de.relluem94.capturespleef.CaptureSpleef.teamSize;
 import static de.relluem94.capturespleef.CaptureSpleef.ts;
 import static de.relluem94.capturespleef.Strings.ACTIVE_WORLD;
 import static de.relluem94.capturespleef.Strings.CS_NAME;
@@ -19,6 +19,7 @@ import static de.relluem94.capturespleef.Strings.TEAM_RED_NAME;
 import static de.relluem94.minecraft.server.spigot.essentials.Strings.PLUGIN_FORMS_SPACER_MESSAGE;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
@@ -34,24 +35,25 @@ import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.scoreboard.Score;
+import org.jetbrains.annotations.NotNull;
 
 public class GameJoin implements Listener {
 
     @EventHandler
-    public void GameJoinAndLeave(PlayerInteractEvent e) {
+    public void GameJoinAndLeave(@NotNull PlayerInteractEvent e) {
         Player p = e.getPlayer();
 
         a = rot.getSize();
         b = blau.getSize();
-        teamsize = a + b;
+        teamSize = a + b;
 
         Location PosRot = new Location(Bukkit.getWorld(ACTIVE_WORLD), -141, 138, 272);
         Location PosBlau = new Location(Bukkit.getWorld(ACTIVE_WORLD), -124, 138, 272);
 
         ItemStack is = new ItemStack(Material.SUGAR, 1);
         ItemMeta im = is.getItemMeta();
-        im.setDisplayName("�8W�hle dein Team");
-        im.setLore(Arrays.asList("�8Rechtklicke auf den �cNetherBrick �8oder den �9Prismarin"));
+        im.setDisplayName("§8Wähle dein Team");
+        im.setLore(List.of("§8Rechtklicke auf den §cNetherBrick §8oder den §9Prismarin"));
         is.setItemMeta(im);
 
         // Verlassen Team Blau
@@ -73,20 +75,18 @@ public class GameJoin implements Listener {
                             e.getClickedBlock().setType(Material.PRISMARINE);
 
                         } else {
-                            p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + "�6Dieser Slot ist vergeben");
+                            p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + "§6Dieser Slot ist vergeben");
                         }
                     }
                     p.setCustomName(CS_NAME);
                     teams.remove(p);
                     blau.removePlayer(p);
-                    cslobby.addPlayer(p);
+                    csLobby.addPlayer(p);
                     p.getInventory().setItemInHand(new ItemStack(is));
                     //
                     //
                     //
-                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> {
-                        pla.sendMessage(p.getDisplayName() + "�1 hat TeamBlau verlassen");
-                    });
+                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> pla.sendMessage(p.getDisplayName() + "§1 hat TeamBlau verlassen"));
                 }
             } // Verlassen Team Rot
             else if (e.getPlayer().getInventory().getItemInHand().getType() == Material.DIAMOND_HOE) {
@@ -102,20 +102,18 @@ public class GameJoin implements Listener {
                             block.setType(Material.AIR);
                             e.getClickedBlock().setType(Material.NETHER_BRICK);
                         } else {
-                            p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + "�6Dieser Slot ist vergeben");
+                            p.sendMessage(PLUGIN_PREFIX + PLUGIN_FORMS_SPACER_MESSAGE + "§6Dieser Slot ist vergeben");
                         }
                     }
                     p.setCustomName(CS_NAME);
                     teams.remove(p);
                     rot.removePlayer(p);
-                    cslobby.addPlayer(p);
+                    csLobby.addPlayer(p);
                     p.getInventory().setItemInHand(new ItemStack(is));
                     //
                     //
                     //
-                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> {
-                        pla.sendMessage(p.getDisplayName() + "�4 hat TeamRot verlassen");
-                    });
+                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> pla.sendMessage(p.getDisplayName() + "§4 hat TeamRot verlassen"));
                 }
             } // Betreten Team Rot
             else if (e.getPlayer().getInventory().getItemInHand().getType() == Material.SUGAR && e.getPlayer().getCustomName().equals(CS_NAME)) {
@@ -133,8 +131,8 @@ public class GameJoin implements Listener {
                     skull.update(true);
                     ItemStack isTeamRed = new ItemStack(Material.DIAMOND_HOE, 1);
                     ItemMeta imTeamRed = isTeamRed.getItemMeta();
-                    imTeamRed.setDisplayName("�4TeamRot");
-                    imTeamRed.setLore(Arrays.asList("�8Mache hiermit �1Blaue Steine �8zu �4Roten"));
+                    imTeamRed.setDisplayName("§4TeamRot");
+                    imTeamRed.setLore(List.of("§8Mache hiermit §1Blaue Steine §8zu §4Roten"));
                     isTeamRed.setItemMeta(imTeamRed);
                     p.getInventory().setItemInHand(new ItemStack(isTeamRed));
 
@@ -145,7 +143,7 @@ public class GameJoin implements Listener {
                     rot.addPlayer(p);
                     teams.put(p, block.getLocation());
 
-                    p.setScoreboard(sboard);
+                    p.setScoreboard(scoreBoard);
 
                     Score score = obj.getScore(p);
                     score.setScore(lives);
@@ -155,9 +153,9 @@ public class GameJoin implements Listener {
 
                     a = rot.getSize();
                     b = blau.getSize();
-                    teamsize = a + b;
+                    teamSize = a + b;
 
-                    if (teamsize == ts || a == b) {
+                    if (teamSize == ts || a == b) {
                         Bukkit.getOnlinePlayers().forEach(pla -> {
                             if (pla.getCustomName().equals(TEAM_RED_NAME)) {
                                 pla.teleport(PosRot);
@@ -169,9 +167,7 @@ public class GameJoin implements Listener {
                     //
                     //		Team Rot Beitrittsnachricht
                     //
-                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> {
-                        pla.sendMessage(p.getDisplayName() + "�4 ist TeamRot beigetreten");
-                    });
+                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> pla.sendMessage(p.getDisplayName() + "§4 ist TeamRot beigetreten"));
                 } // Betreten Team Blau
                 else if (e.getClickedBlock().getType().equals(Material.PRISMARINE) & !e.getPlayer().getEyeLocation().getBlock().getRelative(0, -2, 0).getType().equals(Material.PRISMARINE) & !e.getPlayer().getEyeLocation().getBlock().getRelative(0, -2, 0).getType().equals(Material.AIR)) {
                     e.getClickedBlock().setType(Material.LAPIS_BLOCK);
@@ -185,8 +181,8 @@ public class GameJoin implements Listener {
                     skull.update(true);
                     ItemStack isTeamBlue = new ItemStack(Material.DIAMOND_SHOVEL, 1);
                     ItemMeta imTeamBlue = isTeamBlue.getItemMeta();
-                    imTeamBlue.setDisplayName("�1TeamBlau");
-                    imTeamBlue.setLore(Arrays.asList("�8Mache hiermit �4Rote Steine �8zu �1Blauen"));
+                    imTeamBlue.setDisplayName("§1TeamBlau");
+                    imTeamBlue.setLore(List.of("§8Mache hiermit §4Rote Steine §8zu §1Blauen"));
                     isTeamBlue.setItemMeta(imTeamBlue);
                     p.getInventory().setItemInHand(new ItemStack(isTeamBlue));
 
@@ -197,7 +193,7 @@ public class GameJoin implements Listener {
                     blau.addPlayer(p);
                     teams.put(p, block.getLocation());
 
-                    p.setScoreboard(sboard);
+                    p.setScoreboard(scoreBoard);
 
                     Score score = obj.getScore(p);
                     score.setScore(lives);
@@ -207,9 +203,9 @@ public class GameJoin implements Listener {
 
                     a = rot.getSize();
                     b = blau.getSize();
-                    teamsize = a + b;
+                    teamSize = a + b;
 
-                    if (teamsize == ts && a == b) {
+                    if (teamSize == ts && a == b) {
                         Bukkit.getOnlinePlayers().forEach(pla -> {
                             if (pla.getCustomName().equals(TEAM_RED_NAME)) {
                                 pla.teleport(PosRot);
@@ -221,9 +217,7 @@ public class GameJoin implements Listener {
                     //
                     //		Team Blau Beitrittsnachricht
                     //
-                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> {
-                        pla.sendMessage(p.getDisplayName() + "�1 ist TeamBlau beigetreten");
-                    });
+                    Bukkit.getOnlinePlayers().stream().filter(pla -> (pla.getCustomName().equals(TEAM_RED_NAME) || pla.getCustomName().equals(TEAM_BLUE_NAME) || pla.getCustomName().equals(CS_NAME))).forEachOrdered(pla -> pla.sendMessage(p.getDisplayName() + "§1 ist TeamBlau beigetreten"));
                 }
             }
         }
